prometheus-ingress.yaml
## Nginx Ingress
## Follow https://devopscube.com/setup-ingress-kubernetes-nginx-controller/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: prometheus.laplastech.cloud
    http:
      paths:
      - backend:
          service:
            name: prometheus-service
            port:
              number: 80
        path: /
        pathType: Prefix
